comListe 0.3.1 - 06-06-2015 - Pierre Van Glabeke
===========================================================
* modifs html5
* mise à jour adapt-themes

comListe 0.3 - 03-03-2015 - Pierre Van Glabeke
===========================================================
* correction localisation
* ajout info sur widget

comListe 0.2 - 19-12-2014 - Pierre Van Glabeke
===========================================================
* compatibilité dc2.7
* suppression dossier .settings + fichiers .buildpath et .project
* modification tpl
* modification localisation
* modification icône

comListe 0.1.9 - 2013-10-13 - Pierre Van Glabeke
===========================================================
* compatibilité dc2.6

comListe 0.1.8 - 2009-07-20
===========================================================
* correction sur le calcul du nombre de commentaires

comListe 0.1.7 - 2009-07-20
===========================================================
* mise à niveau pour la compatibilité Dotclear 2.2
* mise à niveau pour la compatibilité php 5.3.0
* Ticket #272 : coquille anglais corrigée
* Ticket #271 : texte localisé corrigé dans les templates
* mise à niveau de la licence de l'extension

comListe 0.1.6 - 2009-10-07
===========================================================
* correction d'une erreur dans la pagination
* utilisation du plugin translater pour la traduction

comListe 0.1.5
* correction des termes de la licence
* mise aux normes structurelles de Dotclear des fichiers
* Ticket #132 : ajout du titre du post dans le template par défaut

comListe 0.1.4
* creation de templates personnalisés dans le repertoire adapt-themes
* remplacement de la méthode de traduction

comListe 0.1.3
* correction du template comListe.html

comListe 0.1.2
* suppression du fichier _install.php pour supprimer le bug d'affichage dans la partie admin

comListe 0.1.1
* ajout de l'initialisation des paramètres par défaut
* ajout de l'aide dans la partie admin
* ajout d'une icone pour la partie admin
